--- a/index.html
+++ b/index.html
@@ -1,1 +1,23 @@
-<!DOCTYPE html><html><head><title>Portafolio</title></head><body><div id='root'></div></body></html>
+<!DOCTYPE html>
+<html lang="es">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Portafolio de David Vaz" />
+    <title>David Vaz | Portafolio</title>
+
+    <!-- Fuente elegante -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+
+    <!-- Favicon (puedes cambiarlo por uno tuyo si quieres) -->
+    <link rel="icon" href="/favicon.ico" />
+
+    <!-- Script principal -->
+    <script type="module" src="/src/main.jsx"></script>
+  </head>
+  <body class="bg-[#0d1117] text-white font-[Inter]">
+    <div id="root"></div>
+  </body>
+</html>
