--- a/public/previews/Autoprofe.html
+++ b/public/previews/Autoprofe.html
@@ -585,7 +585,7 @@ html.login-page body { /* MANTENIDO - YA SON PSEUDO-CLASES */
     <title>PopCar</title>
   </head>
   <body>
-    <main>
+    <main style="overflow: hidden;">
       <div id="order-container-1" class="order-container">
         <div id="header-container" class="header-container">
           <div class="lato-bold" style="font-size: 2.5rem; text-align: center;">
