--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
 
     <!-- Favicon (puedes cambiarlo por uno tuyo si quieres) -->
-    <link rel="icon" href="/favicon.ico" />
+    <link rel="icon" href="/src/app/favicon.ico" />
 
     <!-- Script principal -->
     <script type="module" src="/src/main.jsx"></script>
